--- a/exp/eb3_b0.9d0.35_ep300b16_lr0.01to0.8wd2e-5nowd_rot15sc0.6vcrop_ls0.05/cfg.yaml
+++ b/exp/eb3_b0.9d0.35_ep300b16_lr0.01to0.8wd2e-5nowd_rot15sc0.6vcrop_ls0.05/cfg.yaml
@@ -1,7 +1,7 @@
 data:
     batch_size: 16
     rot: 15
-    root: x
+    root: ~                     # None: [will be expand as ~/datasets/scene15]
     vgg: False
     scale_ratio: 0.6
     val_crop: True
@@ -10,11 +10,11 @@ model:
     name: efficientnet_b3
     kwargs:
         bn_mom: 0.9
-        dropout_rate: 0.35     # b0b1: 0.2, b2b3: 0.3, b4b5: 0.4, b6b7: 0.5
+        dropout_rate: 0.35      # b0b1: 0.2, b2b3: 0.3, b4b5: 0.4, b6b7: 0.5
 
 train:
     ema_mom: 0.999
-    epochs: 300
+    epochs: 3
     lr: [0.01, 0.02, 0.04, 0.08,    0.1, 0.2, 0.4, 0.8]
     wd: 2e-5
     nowd: True
