--- a/exp/eb3k_b0.9d0.35_ep300b16_lr0.01to0.8wd2e-5nowd_rot15sc0.6vcrop_ls0.05/cfg.yaml
+++ b/exp/eb3k_b0.9d0.35_ep300b16_lr0.01to0.8wd2e-5nowd_rot15sc0.6vcrop_ls0.05/cfg.yaml
@@ -7,11 +7,11 @@ data:
     val_crop: True
 
 model:
-    name: efficientnet_b3
+    name: efficientnet_b3_k
     ema_mom: 0.999
     kwargs:
         bn_mom: 0.9
-        dropout_rate: 0.35      # b0b1: 0.2, b2b3: 0.3, b4b5: 0.4, b6b7: 0.5
+        dropout_rate: 0.4      # b0b1: 0.2, b2b3: 0.3, b4b5: 0.4, b6b7: 0.5
 
 train:
     epochs: 3
