--- a/exp/eb3k_b0.9d0.5_ep400b16_lr0.04wd1e-5to8e-4nowd_paug_ls0.05/cfg.yaml
+++ b/exp/eb3k_b0.9d0.5_ep400b16_lr0.04wd1e-5to8e-4nowd_paug_ls0.05/cfg.yaml
@@ -15,6 +15,7 @@ model:
     kwargs:
         bn_mom: 0.9
         dropout_rate: 0.48      # b0b1: 0.2, b2b3: 0.3, b4b5: 0.4, b6b7: 0.5
+        mlp: True
     ema_mom: 0.999
 
 train:
