--- a/exp/eb3k_b0.9d0.5to0.8_ep400b32_lr0.08wd1e-3nowd_paug_ls0.05/cfg.yaml
+++ b/exp/eb3k_b0.9d0.5to0.8_ep400b32_lr0.08wd1e-3nowd_paug_ls0.05/cfg.yaml
@@ -2,7 +2,7 @@ data:
     batch_size: 32
     wh: [0.6, 0.45]
     scale_ratio: [0.6, 0.45]
-    sharp: [0.6, 1.0]
+    sharp: [0.55, 1.0]
     trans: [0.2, 0.35]
     rot: [15, 25]
     jitter: [0.25, 0.4]
@@ -15,16 +15,16 @@ model:
     kwargs:
         bn_mom: 0.9
         dropout_rate: [0.5, 0.6, 0.7, 0.8]      # b0b1: 0.2, b2b3: 0.3, b4b5: 0.4, b6b7: 0.5
-        mlp: True
+        mlp: False
     ema_mom: 0.999
 
 train:
     epochs: 400
-    lr: 0.05
+    lr: 0.08
     wd: 1e-3
     nowd: True
     ls_ratio: 0.05
-    mix: 0.15
+    mix: 0
     grad_clip: 4
     # desc: [will be auto assigned in runtime]
 
