--- a/exp/effnetb3_epoch400batch16_lr0.04wd1e-3/cfg.yaml
+++ b/exp/effnetb3_epoch400batch16_lr0.04wd1e-3/cfg.yaml
@@ -1,11 +1,11 @@
 data:
-    batch_size: 32
-    wh: [0.6, 0.45]
-    scale_ratio: [0.6, 0.45]
-    sharp: [0.55, 1.0]
-    trans: [0.2, 0.35]
-    rot: [15, 25]
-    jitter: [0.25, 0.4]
+    batch_size: 16
+    wh: [0.7, 0.5]
+    scale_ratio: [0.7, 0.5]
+    sharp: [0.5, 0.9]
+    trans: [0.15, 0.3]
+    rot: [10, 20]
+    jitter: [0.2, 0.4]
     root: ~                     # None: [will be expand as ~/datasets/scene15]
     vgg: False
     val_crop: True
@@ -14,16 +14,15 @@ model:
     name: efficientnet_b3_k
     kwargs:
         bn_mom: 0.9
-        dropout_rate: [0.5, 0.6, 0.7, 0.8]      # b0b1: 0.2, b2b3: 0.3, b4b5: 0.4, b6b7: 0.5
+        dropout_rate: 0.48      # b0b1: 0.2, b2b3: 0.3, b4b5: 0.4, b6b7: 0.5
     ema_mom: 0.999
 
 train:
     epochs: 400
-    lr: 0.08
+    lr: 0.04
     wd: 1e-3
     nowd: True
     ls_ratio: 0.05
-    mix: 0
     grad_clip: 4
     # desc: [will be auto assigned in runtime]
 
